# PangaeaLargeModels

./: Cargo.toml  Readme.md
projects/diffuser-matrix/: Cargo.toml
projects/diffuser-matrix-config/: Cargo.toml
projects/diffuser-matrix-config/src/: lib.rs
projects/diffuser-matrix/src/: lib.rs
projects/diffuser-matrix/src/config/: mod.rs
projects/pangaea-types/: Cargo.toml
projects/pangaea-types/src/: lib.rs
projects/pangaea-types/src/config/: mod.rs
projects/pangaea-types/src/database/: mod.rs
projects/pangaea-types/src/database/users/: mod.rs  user_email_registration.rs
projects/pangaea-types/src/errors/: convert.rs  display.rs  mod.rs
projects/pangaea-types/src/models/: mod.rs
projects/pangaea-types/src/tasks/: mod.rs
projects/pangaea-types/src/tasks/stable_diffusion/: mod.rs
projects/pangaea-types/tests/: main.rs  stable_diffusion_15.json  stable_diffusion_15.schema.json
