[package]
name = "pangaea-types"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
rand = "0.9.0-alpha.1"
lettre = "0.11.7"
lettre_email = "0.9.4"
mongodb = "2.8.2"
schemars = { version = "1.0.0-alpha.2", features = [] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
